Profile display now works

--- a/kiln/templates/main.html
+++ b/kiln/templates/main.html
@@ -13,48 +13,7 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     
-    <style type="text/css">
-      body {
-        padding-top: 70px;
-      }
-      .row-space {
-        margin-bottom:15px;
-      }
-      .output-slider {
-        width:7% !important;
-      }
-
-      .temperature {
-        fill: none;
-        stroke: steelblue;
-        stroke-width: 1.5px;
-      }
-      
-      .axis .tick{
-        stroke:#DDD;
-        stroke-width:.5px;
-      }
-      .domain{
-        display:none;
-      }
-
-      #graph {
-        width:100%;
-        height:500px;
-      }
-
-      #stop_button_navbar {
-        margin-left:10px;
-        margin-right:10px;
-      }
-
-      #current_temp {
-        font-weight:bold;
-        font-size:200%;
-        color:black;
-      }
-
-    </style>
+    <link rel="stylesheet" href="css/temp_monitor.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
