Node dragging works, no saving yet

--- a/kiln/static/css/temp_monitor.css
+++ b/kiln/static/css/temp_monitor.css
@@ -52,5 +52,12 @@ body {
   stroke-width:1px;
 }
 .profile-line.dot:hover {
-  stroke-width:5px;
+  stroke-width:3px;
+}
+
+#profile-node-info {
+  float:left;
+  position:absolute;
+  display:none;
+  width:200px;
 }
