--- a/kiln/templates/main.html
+++ b/kiln/templates/main.html
@@ -130,6 +130,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/d3.v3.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/juration.js"></script>
     <script type="text/javascript" src="js/temp_graph.js"></script>
     <script type="text/javascript" src="js/temp_profile.js"></script>
     <script type="text/javascript" src="js/temp_monitor.js"></script>
