Schedule saving complete, add pcb images
Most of the UI elements behave as expected, but setting the Running
state is not yet complete. Still need to work out how to deal with the
profile names on the server side. Added a couple of images for the PCB.
Rendered version of the pcb is care of dirtypcb.com, where I ordered the
first batch of PCBs. The other image is rendered via EagleCAD.

--- a/kiln/static/css/temp_monitor.css
+++ b/kiln/static/css/temp_monitor.css
@@ -41,6 +41,16 @@ body {
 .profile-pane {
   fill:#EEE;
 }
+.profile-pane-stroke {
+  fill:none;
+  stroke:#CCC;
+  stroke-width:3px;
+  cursor:ew-resize;
+}
+.profile-pane-stroke:hover {
+  stroke-width:15px;
+  stroke:#333;
+}
 .profile-line {
   stroke:green;
   stroke-width:1.5px;
